--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ font-family: "Overpass", sans-serif;
     --orange: #FC7614;
     --white: #FFF;
     --very-dark-blue: #131518;
-    --black-gradient: radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0%, #181E27 100%)
+    --black-gradient: radial-gradient(98.96% 98.96% at 50% 0%, #232A34 0%, #181E27 100%);
 
 }
 
